# bayinx

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release_and_publish.yml
.zed/: settings.json
api/dists/: index.html
api/flows/: index.html
api/model/: index.html
api/nodes/: index.html
api/ops/: index.html
api/posterior/: index.html
docs/: index.md
docs/api/: dists.md  flows.md  model.md  nodes.md  ops.md  posterior.md
docs/examples/intro/leaf_discs/: index.md
docs/source/: bayinx.constraints.rst  bayinx.core.rst  bayinx.dists.rst  bayinx.flows.rst  bayinx.nodes.rst  bayinx.rst  bayinx.vi.rst  conf.py  index.rst  modules.rst
docs/tutorials/: stan.md
examples/intro/leaf_discs/: index.html
site/api/dists/: index.html
site/api/flows/: index.html
site/api/nodes/: index.html
site/api/ops/: index.html
site/api/posterior/: index.html
site/tutorials/stan/: index.html
src/bayinx/: __init__.py  ops.py  posterior.py
src/bayinx/constraints/: __init__.py  identity.py  interval.py  lower.py  upper.py
src/bayinx/core/: constraint.py  context.py  distribution.py  flow.py  model.py  node.py  types.py  utils.py  variational.py
src/bayinx/dists/: __init__.py  _exponential.py  _normal.py  bernoulli.py  binomial.py  exponential.py  poisson.py
src/bayinx/dists/bernoulli/: distribution.py
src/bayinx/dists/bernoulli/pars/: __init__.py  prob_failure.py  prob_success.py
src/bayinx/dists/binomial/: distribution.py
src/bayinx/dists/binomial/pars/: __init__.py  logit_prob_success.py  prob_failure.py  prob_success.py
src/bayinx/dists/exponential/: distribution.py
src/bayinx/dists/exponential/pars/: __init__.py  rate.py  scale.py
src/bayinx/dists/normal/: distribution.py
src/bayinx/dists/normal/pars/: __init__.py  mean_prec.py  mean_scale.py  mean_var.py
src/bayinx/dists/poisson/: distribution.py
src/bayinx/dists/poisson/pars/: __init__.py  log_rate.py  rate.py
src/bayinx/flows/: __init__.py  diagaffine.py  fullaffine.py  lowrankaffine.py  planar.py  sylvester.py
src/bayinx/nodes/: __init__.py  continuous.py  observed.py  stochastic.py
src/bayinx/vi/: meanfield.py  normalizing_flow.py  standard.py
tests/examples/: test_binomial.py  test_glm.py  test_lm.py  test_nn.py  test_normal.py
tests/inference/: test_continuous.py
tests/model_definition/: test_core.py  test_dunder.py  test_dynamic.py
tutorials/stan/: index.html
